# presheaf

./: .clang-format  .clang-tidy  .clangd  .codespellrc  .gitignore  CMakeLists.txt  LICENSE  README  README.md  STYLE_GUIDE  STYLE_GUIDE.md  build.lua  mk.py  todo.txt
include/: compile_options.h
include/psh/: algorithms.h  algorithms.hh  algorithms.hpp  all.h  all.hpp  arena.h  arena.hh  arena.hpp  array.h  array.hh  array.hpp  assert.h  assert.hh  assert.hpp  bit.h  bit.hpp  buffer.h  buffer.hh  buffer.hpp  concepts.h  core.h  core.hh  core.hpp  debug.hpp  defer.h  defer.hh  defer.hpp  dyn_array.h  dyn_array.hh  dyn_array.hpp  dynarray.hpp  fat_ptr.h  fat_ptr.hh  fat_ptr.hpp  file_system.h  input.h  intrinsics.h  io.h  log.h  log.hh  (+42 more)
src/: all.cc  all.cpp  arena.cc  arena.cpp  assert.cc  assert.cpp  debug.cpp  file_system.cc  file_system.cpp  impl_common.h  impl_common.hh  impl_common.hpp  io.cc  io.cpp  log.cc  log.cpp  mem_utils.cc  mem_utils.cpp  memory.cpp  memory_manager.cc  memory_manager.cpp  memory_utils.cc  memory_utils.cpp  presheaf.cpp  presheaf.hpp  presheaf_impl.cpp  psh_algorithms.hpp  psh_config.hpp  psh_core.hpp  psh_debug.cpp  psh_debug.hpp  psh_defer.hpp  psh_impl_debug.cpp  psh_impl_memory.cpp  psh_impl_stb_sprintf.cpp  psh_impl_streams.cpp  psh_impl_string.cpp  psh_impl_time.cpp  psh_math.hpp  psh_memory.cpp  (+24 more)
tests/: test_algorithms.cpp  test_all.cc  test_all.cpp  test_allocators.cc  test_allocators.cpp  test_bit.cc  test_bit.cpp  test_containers.cpp  test_dyn_array.cpp  test_dynarray.cc  test_dynarray.cpp  test_logging.cpp  test_memory_manager.cc  test_memory_manager.cpp  test_presheaf.cpp  test_repr.cc  test_repr.cpp  test_string.cc  test_string.cpp  test_time.cpp  test_types.cc  test_types.cpp  test_vec.cc  test_vec.cpp  utils.h  utils.hh  utils.hpp
